--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "private": true,
   "scripts": {
     "docusaurus": "docusaurus",
-    "start": "docusaurus start",
-    "start-docker": "docusaurus start site --host 0.0.0.0 --poll 1000",
+    "start": "cross-env-shell docusaurus start $DOCUSAURUS_OPTIONS",
     "build": "docusaurus build",
     "swizzle": "docusaurus swizzle",
     "deploy": "docusaurus deploy",
@@ -25,7 +24,8 @@
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "2.4.1"
+    "@docusaurus/module-type-aliases": "2.4.1",
+    "cross-env": "^7.0.3"
   },
   "browserslist": {
     "production": [
