--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@mdx-js/react": "^1.6.22",
     "clsx": "^1.2.1",
     "default-passive-events": "^2.0.0",
+    "docusaurus-remark-plugin-tab-blocks": "^1.3.0",
     "plugin-image-zoom": "flexanalytics/plugin-image-zoom",
     "prism-react-renderer": "^1.3.5",
     "react": "^17.0.2",
