--- a/package.json
+++ b/package.json
@@ -15,25 +15,29 @@
     "write-heading-ids": "docusaurus write-heading-ids"
   },
   "dependencies": {
-    "@docusaurus/core": "^2.4.1",
-    "@docusaurus/plugin-client-redirects": "^2.4.1",
-    "@docusaurus/preset-classic": "^2.4.1",
-    "@docusaurus/theme-mermaid": "^2.4.1",
-    "@mdx-js/react": "^1.6.22",
+    "@docusaurus/core": "^3.1.0",
+    "@docusaurus/plugin-client-redirects": "^3.1.0",
+    "@docusaurus/preset-classic": "^3.1.0",
+    "@docusaurus/theme-mermaid": "^3.1.0",
+    "@mdx-js/react": "^3.0.0",
     "clsx": "^1.2.1",
     "default-passive-events": "^2.0.0",
-    "docusaurus-remark-plugin-tab-blocks": "^1.3.0",
+    "docusaurus-remark-plugin-tab-blocks": "^3.0.0",
     "plugin-image-zoom": "flexanalytics/plugin-image-zoom",
-    "prism-react-renderer": "^1.3.5",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "prism-react-renderer": "^2.3.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "shell-quote": "^1.8.1"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "2.4.1",
+    "@docusaurus/module-type-aliases": "^3.1.0",
+    "@docusaurus/tsconfig": "^3.1.0",
+    "@docusaurus/types": "^3.1.0",
     "@jest/globals": "^29.6.1",
+    "@types/react": "^18.2.48",
     "cross-env": "^7.0.3",
-    "jest": "^29.6.1"
+    "jest": "^29.6.1",
+    "typescript": "~5.2.2"
   },
   "browserslist": {
     "production": [
@@ -48,6 +52,11 @@
     ]
   },
   "engines": {
-    "node": ">=16.14"
+    "node": ">=18.0"
+  },
+  "overrides": {
+    "docusaurus-plugin-image-zoom": {
+      "@docusaurus/theme-classic": "^3.0.0"
+    }
   }
 }
