--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "@docusaurus/tsconfig": "^3.1.0",
     "@docusaurus/types": "^3.1.0",
     "@jest/globals": "^29.6.1",
+    "@types/mdast": "^4.0.3",
     "@types/react": "^18.2.48",
+    "@types/shell-quote": "^1.7.5",
     "cross-env": "^7.0.3",
     "jest": "^29.6.1",
     "typescript": "~5.2.2"
