--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "docusaurus": "docusaurus",
     "start": "cross-env-shell docusaurus start $DOCUSAURUS_OPTIONS",
     "build": "docusaurus build",
-    "test": "jest",
+    "test": "node --experimental-vm-modules --test src",
     "swizzle": "docusaurus swizzle",
     "deploy": "docusaurus deploy",
     "clear": "docusaurus clear",
@@ -33,12 +33,10 @@
     "@docusaurus/module-type-aliases": "^3.1.0",
     "@docusaurus/tsconfig": "^3.1.0",
     "@docusaurus/types": "^3.1.0",
-    "@jest/globals": "^29.6.1",
     "@types/mdast": "^4.0.3",
     "@types/react": "^18.2.48",
     "@types/shell-quote": "^1.7.5",
     "cross-env": "^7.0.3",
-    "jest": "^29.6.1",
     "typescript": "~5.2.2"
   },
   "browserslist": {
