--- a/package.json
+++ b/package.json
@@ -58,5 +58,9 @@
     "docusaurus-plugin-image-zoom": {
       "@docusaurus/theme-classic": "^3.0.0"
     }
+  },
+  "prettier": {
+    "trailingComma": "all",
+    "singleQuote": true
   }
 }
