--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "prism-react-renderer": "^2.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^9.0.1",
+    "react-select": "^5.8.0",
     "shell-quote": "^1.8.1"
   },
   "devDependencies": {
