--- a/.github/workflows/snapshot.yml
+++ b/.github/workflows/snapshot.yml
@@ -13,7 +13,7 @@ on:
         type: string
         required: false
 jobs:
-  release:
+  snapshot:
     runs-on: ubuntu-latest
     env:
       VERSION: ${{inputs.version}}
@@ -23,7 +23,8 @@ jobs:
         with:
           persist-credentials: false
       - uses: extractions/setup-just@v1
-      - run: |
+      - name: Create snapshot
+        run: |
           git config --global user.email "info@thin-edge.io"
           git config --global user.name "Versioneer"
           git checkout -b "$PR_BRANCH"
