--- a/.github/workflows/snapshot.yml
+++ b/.github/workflows/snapshot.yml
@@ -18,6 +18,7 @@ jobs:
     env:
       VERSION: ${{inputs.version}}
       PR_BRANCH: release-${{inputs.version}}
+      SOURCE_BRANCH: ${{inputs.branch || ''}}
     steps:
       - uses: actions/checkout@v4
       - uses: extractions/setup-just@v1
@@ -26,12 +27,12 @@ jobs:
           git config --global user.email "info@thin-edge.io"
           git config --global user.name "Versioneer"
           git checkout -b "$PR_BRANCH"
-          if [ -n "${{inputs.branch}}" ]; then
+          if [ -n "$SOURCE_BRANCH" ]; then
+            just checkout-version "$VERSION" "$SOURCE_BRANCH"
+            git commit -am "Backporting snapshot for version $VERSION on branch"  
+          else
             just checkout-version "$VERSION"
             git commit -am "Create snapshot for version $VERSION"
-          else
-            just checkout-version "$VERSION" "${{inputs.branch}}"
-            git commit -am "Backporting snapshot for version $VERSION on branch"
           fi
           git push --set-upstream origin release-1.0.0
       - name: create pull request
