--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@docusaurus/preset-classic": "^3.1.0",
     "@docusaurus/theme-mermaid": "^3.1.0",
     "@mdx-js/react": "^3.0.0",
+    "@uidotdev/usehooks": "^2.4.1",
     "clsx": "^1.2.1",
     "default-passive-events": "^2.0.0",
     "docusaurus-remark-plugin-tab-blocks": "^3.0.0",
